--- a/indext.html
+++ b/indext.html
@@ -5,116 +5,262 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ageflix - Home</title>
 <style>
-  body { margin:0; font-family: Arial, sans-serif; background:#121212; color:#fff; }
-  .navbar { display:flex; justify-content:space-between; align-items:center; background:#1c1c1c; padding:12px 20px; position:sticky; top:0; z-index:1000; flex-wrap:wrap; }
-  .logo-left { font-size:28px; font-weight:bold; color:#e50914; }
-  .menu-btn { display:none; font-size:24px; background:none; border:none; color:#fff; cursor:pointer; }
-  .navbar ul { list-style:none; display:flex; align-items:center; margin:0; padding:0; }
-  .navbar ul li { margin:0 15px; }
-  .navbar ul li a { text-decoration:none; color:#fff; font-weight:bold; padding:8px 5px; }
-  .navbar ul li a:hover { color:#e50914; }
-  .hero { text-align:center; padding:50px 20px; }
-  #webcam-container { margin:20px auto; }
-  #startBtn { margin-top:20px; padding:14px 28px; font-size:18px; background:#e50914; border:none; border-radius:6px; color:#fff; cursor:pointer; }
-  /* Modal Styles */
-  .modal { display:none; position:fixed; z-index:2000; left:0; top:0; width:100%; height:100%; overflow:auto; background-color:rgba(0,0,0,0.8); }
-  .modal-content { background:#1c1c1c; margin:15% auto; padding:30px; border-radius:10px; width:90%; max-width:400px; text-align:center; color:#fff; }
-  .modal-content h2 { color:#e50914; margin-bottom:20px; }
-  .modal-content button { margin-top:20px; padding:12px 24px; font-size:16px; background:#e50914; border:none; border-radius:6px; color:#fff; cursor:pointer; }
-  .modal-content button:hover { background:#b00610; }
-  @media(max-width:768px){ .menu-btn{display:block;} .navbar ul{flex-direction:column; max-height:0; overflow:hidden;} .navbar ul.show{max-height:500px;} .navbar ul li{margin:10px 0;} }
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #121212;
+    color: #fff;
+  }
+
+  /* Banner Slider with Fade */
+  .banner-slider {
+    position: relative;
+    width: 100%;
+    max-height: 300px;
+    overflow: hidden;
+  }
+
+  .slide {
+    position: absolute;
+    width: 100%;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+  }
+
+  .slide img {
+    width: 100%;
+    display: block;
+    object-fit: cover;
+  }
+
+  .slide.active { opacity: 1; z-index: 1; }
+
+  /* Buttons */
+  .prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 36px;
+    color: white;
+    background: rgba(0,0,0,0.3);
+    border: none;
+    padding: 10px 16px;
+    cursor: pointer;
+    border-radius: 3px;
+    z-index: 10;
+  }
+
+  .prev { left: 10px; }
+  .next { right: 10px; }
+
+  .prev:hover, .next:hover { background: rgba(0,0,0,0.6); }
+
+  /* Dots */
+  .dots {
+    text-align: center;
+    position: absolute;
+    bottom: 12px;
+    width: 100%;
+  }
+
+  .dot {
+    display: inline-block;
+    height: 12px;
+    width: 12px;
+    margin: 0 4px;
+    background-color: #bbb;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .dot.active { background-color: #e50914; }
+
+  /* Navbar */
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 20px;
+    background-color: rgba(28,28,28,0.9);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    flex-wrap: wrap;
+  }
+
+  .logo-left { font-size: 28px; font-weight: bold; color: #e50914; }
+  .logo-right { font-size: 16px; color: #ddd; max-width: 250px; text-align: right; }
+
+  /* Menu button for mobile */
+  .menu-btn { display: none; font-size: 24px; background: none; border: none; color: #fff; cursor: pointer; }
+
+  .navbar ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    transition: max-height 0.3s ease;
+  }
+
+  .navbar ul li { margin: 0 15px; }
+  .navbar ul li a { text-decoration: none; color: #fff; font-weight: bold; padding: 8px 5px; transition: color 0.3s, transform 0.2s; }
+  .navbar ul li a:hover { color: #e50914; transform: translateY(-2px); }
+
+  /* Project description */
+  .project-info {
+    background-color: #1c1c1c;
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 700px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 18px;
+    color: #ddd;
+  }
+
+  .project-info strong { color: #e50914; font-size: 22px; }
+
+  /* Hero section */
+  .hero { text-align: center; padding: 50px 20px; }
+  #webcam-container, #label-container { margin: 20px auto; }
+  #startBtn {
+    margin-top: 20px; padding: 14px 28px; font-size: 18px;
+    background-color: #e50914; border: none; border-radius: 6px; color: white;
+    cursor: pointer; transition: background 0.3s, transform 0.2s;
+  }
+  #startBtn:hover { background-color: #b00610; transform: scale(1.05); }
+
+  /* Responsive for mobile */
+  @media (max-width: 768px) {
+    .menu-btn { display: block; }
+    .navbar ul { flex-direction: column; width: 100%; max-height: 0; overflow: hidden; }
+    .navbar ul.show { max-height: 500px; }
+    .navbar ul li { margin: 10px 0; }
+    .logo-right { text-align: left; margin-top: 12px; width: 100%; }
+    #startBtn { width: 90%; font-size: 20px; padding: 16px; }
+  }
+  @media (max-width: 480px) {
+    .hero { padding: 40px 10px; }
+    .project-info { padding: 15px; font-size: 16px; }
+    .logo-left { font-size: 24px; }
+    .logo-right { font-size: 14px; max-width: 100%; }
+    .banner-slider { max-height: 150px; }
+    .prev, .next { font-size: 24px; padding: 6px 10px; }
+  }
 </style>
 </head>
 <body>
 
+<!-- Banner Slider -->
+<section class="banner-slider">
+  <div class="slide fade active"><img src="image1.jpg" alt="Banner 1"></div>
+  <div class="slide fade"><img src="image2.jpg" alt="Banner 2"></div>
+  <div class="slide fade"><img src="image3.jpg" alt="Banner 3"></div>
+
+  <button class="prev">&#10094;</button>
+  <button class="next">&#10095;</button>
+
+  <div class="dots">
+    <span class="dot active" onclick="currentSlide(0)"></span>
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+  </div>
+</section>
+
+<!-- Navbar -->
 <nav class="navbar">
   <div class="logo-left">Ageflix</div>
-  <button class="menu-btn" onclick="toggleMenu()">☰</button>
+  <button class="menu-btn" onclick="toggleMenu()">☰ Menu</button>
   <ul id="nav-menu">
     <li><a href="about.html">About</a></li>
     <li><a href="movies.html">Movies</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
+  <div class="logo-right">Discover movies for every age group!</div>
 </nav>
+
+<div class="project-info">
+  <strong>Ageflix</strong> - This project uses the camera to detect age and recommends movies suitable for the user.
+</div>
 
 <section class="hero">
   <h1>Welcome to Ageflix</h1>
   <p>Discover movies according to your age group!</p>
   <div id="webcam-container"></div>
+  <div id="label-container"></div>
   <button id="startBtn">Start Camera & Detect Age</button>
 </section>
-
-<!-- Modal -->
-<div id="ageModal" class="modal">
-  <div class="modal-content">
-    <h2 id="ageGroupText">Age Group</h2>
-    <p>We will suggest movies suitable for you.</p>
-    <button id="okBtn">OK</button>
-  </div>
-</div>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 
 <script>
-function toggleMenu() {
-  document.getElementById('nav-menu').classList.toggle('show');
-}
+  // Mobile menu toggle
+  function toggleMenu() { document.getElementById("nav-menu").classList.toggle("show"); }
 
-const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
-let model, webcam, maxPredictions;
-let detected = false;
+  // Slider Fade effect
+  let slideIndex = 0;
+  const slides = document.querySelectorAll('.slide');
+  const dots = document.querySelectorAll('.dot');
 
-async function init(){
-  if(detected) return;
-  detected = true;
-  const modelURL = URL + "model.json";
-  const metadataURL = URL + "metadata.json";
-  model = await tmImage.load(modelURL, metadataURL);
-  maxPredictions = model.getTotalClasses();
+  function showSlide(index) {
+    if(index >= slides.length) slideIndex = 0;
+    else if(index < 0) slideIndex = slides.length - 1;
+    else slideIndex = index;
 
-  webcam = new tmImage.Webcam(400,300,true);
-  await webcam.setup();
-  await webcam.play();
-  document.getElementById("webcam-container").appendChild(webcam.canvas);
-  window.requestAnimationFrame(loop);
-}
-
-async function loop(){
-  webcam.update();
-  await predict();
-  window.requestAnimationFrame(loop);
-}
-
-async function predict(){
-  const prediction = await model.predict(webcam.canvas);
-  const best = prediction.reduce((a,b)=> a.probability>b.probability?a:b);
-  if(best.probability>0.85){
-    let group = best.className.toLowerCase();
-    showModal(group);
+    slides.forEach((slide,i) => slide.classList.toggle('active', i === slideIndex));
+    dots.forEach((dot,i) => dot.classList.toggle('active', i === slideIndex));
   }
-}
 
-function showModal(group){
-  let ageText = "";
-  let page = "";
-  if(group==="kids"){ ageText="Kids"; page="kids.html"; }
-  else if(group==="adult"){ ageText="Adult"; page="adult.html"; }
-  else if(group==="senior"){ ageText="Senior"; page="senior.html"; }
+  document.querySelector('.next').addEventListener('click', () => showSlide(slideIndex + 1));
+  document.querySelector('.prev').addEventListener('click', () => showSlide(slideIndex - 1));
+  function currentSlide(n) { showSlide(n); }
+  setInterval(() => { showSlide(slideIndex + 1); }, 5000);
+  showSlide(slideIndex);
 
-  const modal = document.getElementById("ageModal");
-  const ageGroupText = document.getElementById("ageGroupText");
-  ageGroupText.textContent = `Detected age group: ${ageText}`;
-  modal.style.display = "block";
+  // Teachable Machine camera
+  const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
+  let model, webcam, maxPredictions;
 
-  document.getElementById("okBtn").onclick = function(){
-    modal.style.display = "none";
-    window.location.href = page;
-  };
-}
+  async function init() {
+    const modelURL = URL + "model.json";
+    const metadataURL = URL + "metadata.json";
+    model = await tmImage.load(modelURL, metadataURL);
+    maxPredictions = model.getTotalClasses();
 
-document.getElementById("startBtn").addEventListener("click", init);
+    const flip = true;
+    webcam = new tmImage.Webcam(400, 300, flip);
+    await webcam.setup();
+    await webcam.play();
+    document.getElementById("webcam-container").appendChild(webcam.canvas);
+    window.requestAnimationFrame(loop);
+  }
+
+  async function loop() {
+    webcam.update();
+    await predict();
+    window.requestAnimationFrame(loop);
+  }
+
+  async function predict() {
+    const prediction = await model.predict(webcam.canvas);
+    let labelContainer = document.getElementById("label-container");
+    labelContainer.innerHTML = "";
+    prediction.forEach(p => {
+      labelContainer.innerHTML += `<p>${p.className}: ${(p.probability * 100).toFixed(2)}%</p>`;
+    });
+
+    const best = prediction.reduce((a,b) => a.probability > b.probability ? a:b);
+    if(best.probability > 0.8){
+      if(best.className.toLowerCase() === "kids") window.location.href = "kids.html";
+      if(best.className.toLowerCase() === "adult") window.location.href = "adult.html";
+      if(best.className.toLowerCase() === "senior") window.location.href = "senior.html";
+    }
+  }
+
+  document.getElementById("startBtn").addEventListener("click", init);
 </script>
-
 </body>
 </html>
